# mdplus_hub

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: config.py  dependencies.py  main.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: auth.py  jobs.py  models.py  molecules.py  projects.py
backend/src/core/: exceptions.py  security.py
backend/src/glimps/: adapter.py  model_serializer.py
backend/src/glimps/file_parsers/: base_parser.py  gro_parser.py  parser_factory.py  pdb_parser.py
backend/src/infrastructure/database/: session.py
backend/src/infrastructure/database/models/: __init__.py  collaboration.py  glimps_model.py  job.py  molecule.py  project.py  user.py
backend/src/infrastructure/repositories/: base.py  project_repository.py  user_repository.py
backend/src/infrastructure/storage/: file_storage.py
backend/src/schemas/requests/: auth.py  model.py  molecule.py  project.py
backend/src/schemas/responses/: auth.py  job.py  model.py  molecule.py  project.py
backend/src/workers/: settings.py
backend/src/workers/tasks/: inference_task.py  training_task.py
backend/tests/: conftest.py
backend/tests/examples/: test.npy  test_ca.npy
backend/tests/examples/cg_output/: B2AR_0.itp  B2AR_1.itp  b2ar_cg.top
backend/tests/integration/: test_api_auth.py  test_api_projects.py
backend/tests/unit/glimps/: test_adapter.py  test_glimps.py
frontend/: next.config.mjs  (+3 more)
(+42 files in other folders)
